AzureRM/Modules/Loadbalancer/Azure-Loadbalancer/2.0/README.MD
<!-- BEGIN_TF_DOCS -->
## Requirements

No requirements.

## Providers

| Name | Version |
|------|---------|
| <a name="provider_azurerm"></a> [azurerm](#provider\_azurerm) | n/a |

## Modules

No modules.

## Resources

| Name | Type |
|------|------|
| [azurerm_lb.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/lb) | resource |
| [azurerm_lb_backend_address_pool.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/lb_backend_address_pool) | resource |
| [azurerm_lb_backend_address_pool_address.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/lb_backend_address_pool_address) | resource |
| [azurerm_lb_nat_pool.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/lb_nat_pool) | resource |
| [azurerm_lb_nat_rule.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/lb_nat_rule) | resource |
| [azurerm_lb_outbound_rule.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/lb_outbound_rule) | resource |
| [azurerm_lb_probe.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/lb_probe) | resource |
| [azurerm_lb_rule.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/lb_rule) | resource |
| [azurerm_client_config.current](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/data-sources/client_config) | data source |
| [azurerm_resource_group.this](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/data-sources/resource_group) | data source |
| [azurerm_subscription.current](https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/data-sources/subscription) | data source |

## Inputs

| Name | Description | Type | Default | Required |
|------|-------------|------|---------|:--------:|
| <a name="input_backend_address_pool"></a> [backend\_address\_pool](#input\_backend\_address\_pool) | n/a | `list(string)` | `null` | no |
| <a name="input_backend_address_pool_address"></a> [backend\_address\_pool\_address](#input\_backend\_address\_pool\_address) | n/a | <pre>list(object({<br>    name                      = string # (Required) The name which should be used for this Backend Address Pool Address. Changing this forces a new Backend Address Pool Address to be created.<br>    backend_address_pool_name = string # (Required) The name of the Backend Address Pool. Changing this forces a new Backend Address Pool Address to be created.<br>    virtual_network = object({<br>      name                = optional(string)<br>      resource_group_name = optional(string)<br>      key                 = optional(string)<br>    })<br>    ip_address = string # (Required) The Static IP Address which should be allocated to this Backend Address Pool.<br>  }))</pre> | `null` | no |
| <a name="input_frontend_ip_configuration"></a> [frontend\_ip\_configuration](#input\_frontend\_ip\_configuration) | (Optional) One or multiple frontend\_ip\_configuration blocks as documented below. | <pre>list(object({<br>    name = string # Required) Specifies the name of the frontend ip configuration.<br>    subnet = optional(object({<br>      id                   = optional(string)<br>      name                 = optional(string)<br>      virtual_network_name = optional(string)<br>      resource_group_name  = optional(string)<br>      tag                  = optional(string)<br>      virtual_network_key  = optional(string)<br>    }))<br><br>    private_ip_address            = optional(any)    # (Optional) Private IP Address to assign to the Load Balancer. The last one and first four IPs in any range are reserved and cannot be manually assigned.<br>    private_ip_address_allocation = optional(string) # (Optional) The allocation method for the Private IP Address used by this Load Balancer. Possible values as Dynamic and Static.<br>    private_ip_address_version    = optional(string) # The version of IP that the Private IP Address is. Possible values are IPv4 or IPv6<br><br>    public_ip_address = optional(object({<br>      id                  = optional(string)<br>      name                = optional(string)<br>      resource_group_name = optional(string)<br>      key                 = optional(string)<br>    }))<br><br>    public_ip_prefix = optional(object({<br>      id                  = optional(string)<br>      name                = optional(string)<br>      resource_group_name = optional(string)<br>      key                 = optional(string)<br>    }))<br><br>    # availability_zone = optional(string) # (Optional) Refer to https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/lb#availability_zone <br>    zones = optional(list(string)) #(Optional) Refer to https://registry.terraform.io/providers/hashicorp/azurerm/latest/docs/resources/lb#availability_zone <br>  }))</pre> | `[]` | no |
| <a name="input_inherit_tags"></a> [inherit\_tags](#input\_inherit\_tags) | If true, the tags from the resource group will be applied to the resource in addition to tags in the variable 'tags'. | `bool` | `false` | no |
| <a name="input_loadbalancer_nat_pool"></a> [loadbalancer\_nat\_pool](#input\_loadbalancer\_nat\_pool) | n/a | <pre>list(object({<br>    name                           = string # (Required) Specifies the name of the NAT pool.<br>    frontend_ip_configuration_name = string # (Required) The name of the frontend IP configuration exposing this rule.<br>    protocol                       = string # (Required) The transport protocol for the external endpoint. Possible values are Udp or Tcp.<br>    frontend_port_start            = any    # (Required) The first port number in the range of external ports that will be used to provide Inbound Nat to NICs associated with this Load Balancer. Possible values range between 1 and 65534, inclusive.<br>    frontend_port_end              = any    # (Required) The last port number in the range of external ports that will be used to provide Inbound Nat to NICs associated with this Load Balancer. Possible values range between 1 and 65534, inclusive.<br>    backend_port                   = any    # (Required) The port used for the internal endpoint. Possible values range between 1 and 65535, inclusive.<br>  }))</pre> | `[]` | no |
| <a name="input_loadbalancer_nat_rule"></a> [loadbalancer\_nat\_rule](#input\_loadbalancer\_nat\_rule) | n/a | <pre>list(object({<br>    name                           = string         # (Required) Specifies the name of the NAT Rule.<br>    frontend_ip_configuration_name = string         # (Required) The name of the frontend IP configuration exposing this rule.<br>    protocol                       = string         # Required) The transport protocol for the external endpoint. Possible values are Udp, Tcp or All<br>    frontend_port                  = any            # (Required) The port for the external endpoint. Port numbers for each Rule must be unique within the Load Balancer. Possible values range between 1 and 65534, inclusive.<br>    backend_port                   = any            # (Required) The port used for internal connections on the endpoint. Possible values range between 1 and 65535, inclusive.<br>    idle_timeout_in_minutes        = optional(any)  # (Optional) Specifies the idle timeout in minutes for TCP connections. Valid values are between 4 and 30 minutes. Defaults to 4 minutes.<br>    enable_floating_ip             = optional(bool) # (Optional) Are the Floating IPs enabled for this Load Balncer Rule? A "floating” IP is reassigned to a secondary server in case the primary server fails. Required to configure a SQL AlwaysOn Availability Group. Defaults to false<br>    enable_tcp_reset               = optional(bool) # (Optional) Is TCP Reset enabled for this Load Balancer Rule? Defaults to false<br>  }))</pre> | `[]` | no |
| <a name="input_loadbalancer_outbound_rule"></a> [loadbalancer\_outbound\_rule](#input\_loadbalancer\_outbound\_rule) | n/a | <pre>list(object({<br>    name                           = string         # (Required) Specifies the name of the Outbound Rule. Changing this forces a new resource to be created.<br>    backend_address_pool_name      = string         # (Required) The name of the backend address pool to tag this rule to.<br>    protocol                       = string         # (Required) The transport protocol for the external endpoint. Possible values are Udp, Tcp or All<br>    enable_tcp_reset               = optional(bool) # (Optional) Receive bidirectional TCP Reset on TCP flow idle timeout or unexpected connection termination. This element is only used when the protocol is set to TCP.<br>    allocated_outbound_ports       = optional(any)  #  (Optional) The number of outbound ports to be used for NAT.<br>    idle_timeout_in_minutes        = optional(any)  # (Optional) The timeout for the TCP idle connection<br>    frontend_ip_configuration_name = list(string)   # List of Frontend IP configuration names to tag rules to<br>  }))</pre> | `[]` | no |
| <a name="input_loadbalancer_rule"></a> [loadbalancer\_rule](#input\_loadbalancer\_rule) | n/a | <pre>list(object({<br>    name                           = string           # (Required) Specifies the name of the LB Rule.<br>    frontend_ip_configuration_name = string           # (Required) The name of the frontend IP configuration to which the rule is associated.<br>    protocol                       = any              # (Required) The transport protocol for the external endpoint. Possible values are Tcp, Udp or All.<br>    frontend_port                  = any              # (Required) The port for the external endpoint. Port numbers for each Rule must be unique within the Load Balancer. Possible values range between 0 and 65534, inclusive.<br>    backend_port                   = any              # (Required) The port used for internal connections on the endpoint. Possible values range between 0 and 65535, inclusive.<br>    backend_address_pool_name      = optional(string) # (Optional) A reference to a Backend Address Pool over which this Load Balancing Rule operates.<br>    probe_name                     = optional(string) # (Optional) A reference to a Probe used by this Load Balancing Rule.<br>    enable_floating_ip             = optional(bool)   # (Optional) Are the Floating IPs enabled for this Load Balncer Rule? A "floating” IP is reassigned to a secondary server in case the primary server fails. Required to configure a SQL AlwaysOn Availability Group. Defaults to false.<br>    idle_timeout_in_minutes        = optional(any)    # (Optional) Specifies the idle timeout in minutes for TCP connections. Valid values are between 4 and 30 minutes. Defaults to 4 minutes.<br>    load_distribution              = optional(string) # (Optional) Specifies the load balancing distribution type to be used by the Load Balancer. Possible values are: Default – The load balancer is configured to use a 5 tuple hash to map traffic to available servers. SourceIP – The load balancer is configured to use a 2 tuple hash to map traffic to available servers. SourceIPProtocol – The load balancer is configured to use a 3 tuple hash to map traffic to available servers. Also known as Session Persistence, where the options are called None, Client IP and Client IP and Protocol respectively.<br>    disable_outbound_snat          = optional(string) # (Optional) Is snat enabled for this Load Balancer Rule? Default false.<br>    enable_tcp_reset               = optional(bool)   # (Optional) Is TCP Reset enabled for this Load Balancer Rule? Defaults to false.<br>  }))</pre> | `[]` | no |
| <a name="input_location"></a> [location](#input\_location) | (Optional) The location/region where the core network will be created. The full list of Azure regions can be found at https://azure.microsoft.com/regions | `string` | `null` | no |
| <a name="input_name"></a> [name](#input\_name) | (Required) Specifies the name of the Load Balancer. | `string` | n/a | yes |
| <a name="input_probe"></a> [probe](#input\_probe) | n/a | <pre>list(object({<br>    name                      = string           # (Required) Specifies the name of the Probe.<br>    probe_protocol            = optional(string) # (Optional) Specifies the protocol of the end point. Possible values are Http, Https or Tcp. If Tcp is specified, a received ACK is required for the probe to be successful. If Http is specified, a 200 OK response from the specified URI is required for the probe to be successful.<br>    probe_port                = any              # (Required) Port on which the Probe queries the backend endpoint. Possible values range from 1 to 65535, inclusive.<br>    request_path              = optional(string) # (Optional) The URI used for requesting health status from the backend endpoint. Required if protocol is set to Http or Https. Otherwise, it is not allowed.<br>    probe_interval            = optional(any)    # (Optional) The interval, in seconds between probes to the backend endpoint for health status. The default value is 15, the minimum value is 5.<br>    probe_unhealthy_threshold = optional(any)    # (Optional) The number of failed probe attempts after which the backend endpoint is removed from rotation. The default value is 2. NumberOfProbes multiplied by intervalInSeconds value must be greater or equal to 10.Endpoints are returned to rotation when at least one probe is successful.<br>  }))</pre> | `null` | no |
| <a name="input_public_ip_addresses"></a> [public\_ip\_addresses](#input\_public\_ip\_addresses) | (Required) Public IP address output from Azure-PublicIPAddress module. IP address must be of type static and standard. | <pre>map(object({<br>    fqdn    = optional(string)<br>    id      = string<br>    address = optional(string)<br>  }))</pre> | `{}` | no |
| <a name="input_public_ip_prefixes"></a> [public\_ip\_prefixes](#input\_public\_ip\_prefixes) | (Optional) Output of Module Azure-PublicIPPRefix, used to lookup resource ID when var.public\_ip\_prefix\_tag is specified. | <pre>map(object({<br>    id        = string           # Resource ID of the public ip prefix object<br>    ip_prefix = optional(string) # CIDR prefix count of prefix object.<br>  }))</pre> | `{}` | no |
| <a name="input_resource_group"></a> [resource\_group](#input\_resource\_group) | (Required) The name of the resource group where to create the resource. Specify either the actual name or the Tag value that can be used to look up Resource group properties from output of module Azure-ResourceGroup. | <pre>object({<br>    name = optional(string) # Name of the resource group<br>    key  = optional(string) # Terraform Object Key to use to find the resource group from output of module Azure-ResourceGroup supplied to variable "resource_groups"<br>  })</pre> | n/a | yes |
| <a name="input_resource_groups"></a> [resource\_groups](#input\_resource\_groups) | (Optional) Output of Module Azure-ResourceGroup. Used to lookup RG properties using Terraform Object Keys"<br>    id       = # ID of the resource group<br>    location = # Location of the resource group<br>    tags     = # List of Azure tags applied to resource group<br>    name     = # Name of the resource group | <pre>map(object({<br>    id       = optional(string)<br>    location = optional(string)<br>    tags     = optional(map(string))<br>    name     = optional(string)<br>  }))</pre> | `{}` | no |
| <a name="input_sku"></a> [sku](#input\_sku) | (Optional) The SKU of the Azure Load Balancer. Accepted values are Basic and Standard. Defaults to Basic. | `string` | `"Basic"` | no |
| <a name="input_tags"></a> [tags](#input\_tags) | (Optional) A mapping of tags to assign to the resource. | `map(string)` | `{}` | no |
| <a name="input_virtual_networks"></a> [virtual\_networks](#input\_virtual\_networks) | (Optional) Output object from Module Azure-VirtualNetwork, to be used with 'virtual\_network\_tag' and 'virtual\_network\_tag' | <pre>map(object({<br>    id   = string # Resource ID of the virtual Network<br>    name = string # Name of the Virtual Network<br>    subnet = map(object({<br>      id = string<br>    }))<br>  }))</pre> | `{}` | no |

## Outputs

| Name | Description |
|------|-------------|
| <a name="output_backend_address_pool"></a> [backend\_address\_pool](#output\_backend\_address\_pool) | n/a |
| <a name="output_backend_address_pool_address"></a> [backend\_address\_pool\_address](#output\_backend\_address\_pool\_address) | n/a |
| <a name="output_frontend_ip_configuration"></a> [frontend\_ip\_configuration](#output\_frontend\_ip\_configuration) | n/a |
| <a name="output_id"></a> [id](#output\_id) | n/a |
| <a name="output_nat_pool"></a> [nat\_pool](#output\_nat\_pool) | n/a |
| <a name="output_nat_rule"></a> [nat\_rule](#output\_nat\_rule) | n/a |
| <a name="output_outbount_rule"></a> [outbount\_rule](#output\_outbount\_rule) | n/a |
| <a name="output_private_ip_address"></a> [private\_ip\_address](#output\_private\_ip\_address) | n/a |
| <a name="output_private_ip_addresses"></a> [private\_ip\_addresses](#output\_private\_ip\_addresses) | n/a |
| <a name="output_probe"></a> [probe](#output\_probe) | n/a |
| <a name="output_rule"></a> [rule](#output\_rule) | n/a |
<!-- END_TF_DOCS -->